# cpp-VoxelGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Libraries/include/glad/: glad.c  glad.h
Libraries/lib/: glfw3.lib
